Add possibility to upload files.
